--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,10 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python =2.7|3.6|3.7|3.8|3.9|3.10 #ignore pypy
     - pip
   run:
-    - python >=3.6
+    - python =2.7|3.6|3.7|3.8|3.9|3.10 #ignore pypy
 
 test:
   imports:
