Broaden python version compatibility
The previous 3.6|3.7|... expression was using *exact matches*, i.e. 3.7
really means 3.7.0 and NOT 3.7.*. Thus installing the resulting package
in a 3.11.6 environment resulted in the env being downgraded to 3.11.0!

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,16 +11,16 @@ source:
   sha256: 47f68007ceca4d385166f7214e957148e0262814c64bac892ebe5f2da7593fa3
 
 build:
-  number: 1
+  number: 2
   script: '{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv '
   noarch: python
 
 requirements:
   host:
-    - python =2.7|3.6|3.7|3.8|3.9|3.10|3.11|3.12 #ignore pypy
+    - python =2.7.* | >=3.6
     - pip
   run:
-    - python =2.7|3.6|3.7|3.8|3.9|3.10|3.11|3.12 #ignore pypy
+    - python =2.7.* | >=3.6
 
 test:
   imports:
